# hdmea_processing

./: .cursorignore  .gitignore  README.md  To_do.md  cursor_bug_report.md  cursor_profile_20260110.code-profile  optimization_log.txt  pyproject.toml  test_direct_write.txt
.cursor/plans/: add_good_cell_counts_039fb343.plan.md  add_sta_time_course_extraction_9ac2edff.plan.md  baden_pipeline_documentation_fce8d414.plan.md  combined_feature_extraction_pipeline_2cff7fa5.plan.md  implement_lnl_fitting_e6636367.plan.md  manual_label_image_generation_96945385.plan.md  trace_preprocessing_pipeline_c8c1e9a4.plan.md
.cursor/rules/: avoid-unicode-in-code.mdc  powershell-workarounds.mdc  specify-rules.mdc
.specify/memory/: constitution.md
Projects/: pipeline_principle.md
Projects/add_manual_label_cell_type/: add_manual_label_cell_type.py  batch_cell_type.py
Projects/ap_trace_hdf5/: ap_tracking_explained.md  check_directions.py  check_expected_onh.py  check_outliers.py  check_pathways_detail.py  check_source.py  check_structure.py  debug_optimization.py  diagnose_failures.py  inspect_hdf5.py  test_3_files.py  visualize_ap_tracking.py  visualize_intersection.py  visualize_test_files.py
Projects/dsgc_section/: batch_dsgc_section.py  dsgc_section.py  dsgc_section_algo_explained.md  dsgc_section_data_organization.md  dsgc_validation_plots.py
Projects/load_gsheet/: batch_load_gsheet.py  gsheet_table.csv  load_gsheet.py
Projects/pipeline_test/: check_cmcr_dtype.py  inspect_zarr.py  pipeline_load_batch.py  pipeline_session patch.py  pipeline_session.py  pipeline_session_batch.py  pipeline_test.py  pipeline_test_history.py
Projects/rf_sta_measure/: README.md  batch_rf.py  lnl_documentation.md  (+5 more)
config/: defaults.json
docs/: pipeline_explained.md  pipeline_log.md  session_explained.md
scripts/: cursor_ai_checkpoint.ps1  cursor_ai_restore.ps1  validate_analog_section_time.py
tests/: conftest.py
yan_pipeline/: __init__.py  batch_from_folders.py  config.py  manual_label_plots.py
(+549 files in other folders)
