[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hdmea"
version = "0.1.0"
description = "HD-MEA Data Analysis Pipeline for processing high-density multi-electrode array recordings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jiang Lab" }
]
keywords = ["neuroscience", "electrophysiology", "MEA", "spike-sorting", "feature-extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "h5py>=3.0.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies.legacy]
# Zarr kept for reading legacy archives during transition
zarr = ["zarr>=2.16.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.82.0",
    "jupytext>=1.15.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
]
viz = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]

[project.urls]
Homepage = "https://github.com/jianglab/hdmea"
Documentation = "https://github.com/jianglab/hdmea#readme"
Repository = "https://github.com/jianglab/hdmea"

[tool.hatch.build.targets.wheel]
packages = ["src/hdmea"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

